--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,11 @@
 			<version>4.0</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.1</version>
+		</dependency>
 		<!-- deal json -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
