--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,13 @@
 			<version>3.10-FINAL</version>
 		</dependency>
 		<!-- poi 结束 -->
+		<!-- 定时开始 -->
+			<dependency>
+				<groupId>org.quartz-scheduler</groupId>
+				<artifactId>quartz</artifactId>
+				<version>2.2.1</version>
+			</dependency>
+		<!-- 定时结束-->
 		<!-- util结束 -->
 		<dependency>
 			<groupId>cglib</groupId>
