--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.0.2.RELEASE</version>
+        </dependency>
 		<!-- cache redis -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
