--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -23,3 +23,5 @@ log4j.logger.java.sql.Connection=DEBUG
 log4j.logger.java.sql.Statement=DEBUG
 log4j.logger.java.sql.PreparedStatement=DEBUG
 log4j.logger.java.sql.ResultSet=DEBUG
+
+log4j.logger.com.javaapi.test=TRACE
