--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,14 @@
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 	</properties>
 	<build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
 		<plugins>
 			<!-- 根eclipse自带得插件有冲突 -->
 			<!-- <plugin> -->
