--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
                 <includes>
                     <include>**/*.xml</include>
                     <include>**/*.properties</include>
+                    <include>**/*.sql</include>
                 </includes>
             </resource>
         </resources>
@@ -156,6 +157,12 @@
 			<version>5.1.24</version>
 			<scope>runtime</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.2.9</version>
+            <!--<scope>test</scope>-->
+        </dependency>
 		<!-- server -->
 		
 		<!-- cache memcache -->
