--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,6 @@
     <groupId>JavaApiSample</groupId>
     <artifactId>JavaApiSample</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-
-
-
     <properties>
         <dep.jackson-databind.version>2.4.4</dep.jackson-databind.version>
         <spring.version>3.2.7.RELEASE</spring.version>
@@ -164,9 +161,9 @@
         <!-- <version>3.6.1.Final</version> -->
         <!-- </dependency> -->
         <!--<dependency>-->
-            <!--<groupId>org.hibernate</groupId>-->
-            <!--<artifactId>hibernate-core</artifactId>-->
-            <!--<version>4.3.1.Final</version>-->
+        <!--<groupId>org.hibernate</groupId>-->
+        <!--<artifactId>hibernate-core</artifactId>-->
+        <!--<version>4.3.1.Final</version>-->
         <!--</dependency>-->
         <!-- mvc -->
         <dependency>
@@ -181,6 +178,7 @@
             <scope>compile</scope>
         </dependency>
         <!-- orm -->
+        <!--database -->
         <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
@@ -198,6 +196,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.24</version>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.191</version>
         </dependency>
         <dependency>
             <groupId>org.hsqldb</groupId>
@@ -220,11 +223,17 @@
         <!--     	<artifactId>hibernate-core</artifactId> -->
         <!--     	<version>4.1.12.Final</version> -->
         <!--     </dependency> -->
+        <!--<dependency>-->
+            <!--<groupId>javax</groupId>-->
+            <!--<artifactId>javaee-api</artifactId>-->
+            <!--<version>7.0</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>4.1.9.Final</version>
         </dependency>
+
         <!--     <dependency> -->
         <!--     	<groupId>org.hibernate.common</groupId> -->
         <!--     	<artifactId>hibernate-commons-annotations</artifactId> -->
@@ -336,9 +345,9 @@
         </dependency>
         <!-- util开始 -->
         <!--<dependency>-->
-            <!--<groupId>org.hibernate</groupId>-->
-            <!--<artifactId>hibernate-validator</artifactId>-->
-            <!--<version>5.1.0.Final</version>-->
+        <!--<groupId>org.hibernate</groupId>-->
+        <!--<artifactId>hibernate-validator</artifactId>-->
+        <!--<version>5.1.0.Final</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>commons-validator</groupId>
