--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
                 <directory>src/main/java</directory>
                 <includes>
                     <include>**/*.xml</include>
+                    <include>**/*.ftl</include>
                     <include>**/*.properties</include>
                     <include>**/*.sql</include>
                 </includes>
