--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,9 @@
                     <include>**/*.sql</include>
                 </includes>
             </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
         </resources>
         <plugins>
             <!-- 根eclipse自带得插件有冲突 -->
@@ -401,6 +404,11 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
+            <version>4.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
             <version>4.3.1</version>
         </dependency>
 
