--- a/pom.xml
+++ b/pom.xml
@@ -495,6 +495,11 @@
             <version>1.8.6</version>
         </dependency>
         <!-- 定时结束-->
+        <dependency>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-utils</artifactId>
+            <version>3.0.22</version>
+        </dependency>
         <!-- util结束 -->
         <dependency>
             <groupId>cglib</groupId>
