--- a/pom.xml
+++ b/pom.xml
@@ -289,9 +289,9 @@
 
 
         <dependency>
-            <groupId>com.github.abel533</groupId>
+            <groupId>tk.mybatis</groupId>
             <artifactId>mapper</artifactId>
-            <version>1.1.0</version>
+            <version>3.3.8</version>
         </dependency>
         <!-- test -->
         <dependency>
