--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
     <artifactId>JavaApiSample</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <properties>
-        <dep.jackson-databind.version>2.4.4</dep.jackson-databind.version>
+        <!--<dep.jackson-databind.version>2.4.4</dep.jackson-databind.version>-->
+        <dep.jackson-databind.version>2.6.0</dep.jackson-databind.version>
         <spring.version>4.2.6.RELEASE</spring.version>
         <junit.version>4.11</junit.version>
         <java.version>1.8</java.version>
@@ -380,8 +381,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>16.0.1</version>
-            <scope>compile</scope>
+            <version>18.0</version>
         </dependency>
         <!-- jsoup -->
         <dependency>
@@ -541,6 +541,10 @@
                 <exclusion>
                     <groupId>org.springframework</groupId>
                     <artifactId>spring</artifactId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>netty</artifactId>
+                    <groupId>org.jboss.netty</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
