--- a/pom.xml
+++ b/pom.xml
@@ -285,7 +285,7 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>2.6.3</version>
+            <version>2.6.0</version>
         </dependency>
 
 
@@ -370,6 +370,12 @@
             <groupId>commons-validator</groupId>
             <artifactId>commons-validator</artifactId>
             <version>1.4.1</version>
+        </dependency>
+        <!-- remove emoji -->
+        <dependency>
+            <groupId>com.vdurmont</groupId>
+            <artifactId>emoji-java</artifactId>
+            <version>3.1.3</version>
         </dependency>
         <!-- jod -->
         <dependency>
